...
        view.textAlignment = .center
        view.numberOfLines = 0
        return view
    }()
    let retryButton: UIButton = {
        let view = UIButton(type: .system)
        view.setTitle("다시 시도", for: .normal)
        return view
    }()
    private let stack: UIStackView = {
        let view = UIStackView()
        view.axis = .vertical
        view.alignment = .center
...
